Fix alignment.

--- a/src/scss/_downloads.scss
+++ b/src/scss/_downloads.scss
@@ -176,7 +176,7 @@
 			@media (min-width: 1041px) {
 				margin: {
 					top: 16px;
-					bottom: 51px;
+					bottom: 50px;
 				}
 			}
 
